RESOLVED FIXED63151
WebGL test failing on SL bots: fast/canvas/webgl/data-view-test.html
https://bugs.webkit.org/show_bug.cgi?id=63151
Summary WebGL test failing on SL bots: fast/canvas/webgl/data-view-test.html
Matthew Delaney
Reported 2011-06-22 10:10:17 PDT
This WebGL test recently started failing on the bots. I looked at it briefly, but realized that the test may need some looking at since the TypeError and SyntaxError messages don't seem to match up. I get the feeling that our expected results file is incorrect and/or the test may need updating to conform with WebIDL.
Attachments
Proposed Patch (133.49 KB, patch)
2011-06-23 17:16 PDT, Jian Li
kbr: review+
jianli: commit-queue-
Archive of layout-test-results from ec2-cr-linux-02 (1.60 MB, application/zip)
2011-06-23 18:37 PDT, WebKit Review Bot
no flags
Matthew Delaney
Comment 1 2011-06-22 10:54:15 PDT
Added a platform/mac expected results file here to keep tree from burning: http://trac.webkit.org/changeset/89450
Kenneth Russell
Comment 2 2011-06-22 11:51:55 PDT
This is likely failing due to http://trac.webkit.org/changeset/89315 . From looking at the Mac specific test expectations, it looks like the test needs a new baseline, but it also looks like there might also be custom bindings that should change from throwing SyntaxError to throwing TypeError. Jian Li, would you be willing to take this?
Adam Barth
Comment 3 2011-06-22 12:07:31 PDT
Yeah, we change the type of error thrown in this case to match the specs. Sorry we missed this test result. Thanks for cleaning up after us.
Matthew Delaney
Comment 4 2011-06-22 12:12:06 PDT
No worries. So, should the platform independent expected result be updated then (and the platform expected results be blown away)? Because mac SL currently fails against the current platform independent result. I can't wait to have all of these type error issues out of the way.
Kenneth Russell
Comment 5 2011-06-22 12:14:18 PDT
Ideally yes, we should have the same result for all platforms. Hopefully Jian Li can make this work.
Jian Li
Comment 6 2011-06-23 17:16:02 PDT
Created attachment 98438 [details] Proposed Patch
Kenneth Russell
Comment 7 2011-06-23 17:21:24 PDT
Comment on attachment 98438 [details] Proposed Patch It's great that so many duplicated test expectations can be deleted. Did you test on the three affected platforms?
Jian Li
Comment 8 2011-06-23 17:45:16 PDT
Tested on Mac. Will test on Chromium before landing.
WebKit Review Bot
Comment 9 2011-06-23 18:37:49 PDT
Comment on attachment 98438 [details] Proposed Patch Attachment 98438 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/8933299 New failing tests: fast/canvas/webgl/data-view-test.html
WebKit Review Bot
Comment 10 2011-06-23 18:37:54 PDT
Created attachment 98450 [details] Archive of layout-test-results from ec2-cr-linux-02 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-02 Port: Chromium Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Jian Li
Comment 11 2011-06-29 14:29:58 PDT
Note You need to log in before you can comment on or make changes to this bug.