WebGL test failing on SL bots: fast/canvas/webgl/data-view-test.html https://bugs.webkit.org/show_bug.cgi?id=63151

Reviewed by Kenneth Russell.

Source/WebCore:

The fix is to change to throw TypeError in custom JS/V8 bindings.

* bindings/js/JSDataViewCustom.cpp:
(WebCore::getDataViewMember):
(WebCore::setDataViewMember):
* bindings/v8/custom/V8DataViewCustom.cpp:
(WebCore::V8DataView::constructorCallback):
(WebCore::V8DataView::getInt8Callback):

LayoutTests:

Updated the expected result and removed the rebaselined files that are not needed.

* fast/canvas/webgl/data-view-test-expected.txt:
* platform/chromium-mac/fast/canvas/webgl/data-view-test-expected.txt: Removed.
* platform/chromium-win/fast/canvas/webgl/data-view-test-expected.txt: Removed.
* platform/mac/fast/canvas/webgl/data-view-test-expected.txt: Removed.

Canonical link: https://commits.webkit.org/79327@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90046 268f45cc-cd09-0410-ab3c-d52691b4dbfc